# simple-solutions

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  todo
.github/workflows/: tests.yml
app/: cli.py  main.py
app/api/: dependencies.py  routes.py
app/clients/: deribit_client.py
app/core/: config.py  logging.py
app/db/: session.py
app/models/: __init__.py  price_snapshot.py
app/repositories/: price_repository.py
app/schemas/: price.py
app/services/: price_service.py
app/tasks/: celery_app.py  price_tasks.py
tests/: conftest.py  test_api.py  test_service.py
